<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/foot_beer_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cocka_cola_button"
        android:layout_centerVertical="true"
        android:text="@string/foot_beer" />

    <Button
        android:id="@+id/dr_schlepper_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/cocka_cola_button"
        android:layout_marginBottom="150dp"
        android:text="@string/dr_schlepper" />

    <Button
        android:id="@+id/grape_soda_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/cocka_cola_button"
        android:layout_marginBottom="67dp"
        android:text="@string/grape_soda" />

    <TextView
        android:id="@+id/auto_vend_text"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/default_menu" />

    <Button
        android:id="@+id/cocka_cola_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="152dp"
        android:text="@string/cocka_cola" />

    <TextView
        android:id="@+id/cocka_cola_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cocka_cola_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="146dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dr_schlepper_button"
        android:layout_alignStart="@+id/cocka_cola_price_text"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/grape_soda_button"
        android:layout_alignStart="@+id/cocka_cola_price_text"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/foot_beer_button"
        android:layout_alignStart="@+id/cocka_cola_price_text"
        android:text="TextView" />

</RelativeLayout>